syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.xiaofu";
option java_outer_classname = "HelloServiceProto";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string result = 1;
}

service HelloService {
    rpc sayHello(HelloRequest) returns (HelloResponse);
}
